--- a/client/src/components/Campaignlibrary/Campaignlibrary.css
+++ b/client/src/components/Campaignlibrary/Campaignlibrary.css
@@ -11,6 +11,31 @@
       width: 400px;
   }
 
+  .flex-container {
+    display: flex;
+  }
+
+  h3 {
+    margin: 0px 30px 0px 80px;
+  }
+
+  /* #non-subscriber {
+    margin-right: 50px;
+  }
+
+  #subscriber {
+    margin: 0px 120px 0px 100px;
+  }
+
+  #ex-subscriber {
+    margin: 0px 80px 0px 70px;
+  }
+
+  #premium {
+    margin-left: 90px;
+    margin-right: 30px;
+  } */
+
   .button-container {
     display: block;
     margin-left: auto;
