--- a/client/src/components/Signup/Signup.css
+++ b/client/src/components/Signup/Signup.css
@@ -18,7 +18,7 @@
   justify-content: center;
 }
 
-.form-container1 {
+.form-container {
   border: solid rgb(90, 88, 88) 5px;
   border-radius: 10px;
   width: 800px;
