--- a/client/src/components/Signup/Signup.css
+++ b/client/src/components/Signup/Signup.css
@@ -18,10 +18,24 @@
   justify-content: center;
 }
 
-.form-container {
-  border: solid rgb(90, 88, 88) 5px;
-  border-radius: 10px;
+.form-container1 {
+  border: solid rgb(201, 194, 194)  1px;
+  border-radius: 5px;
   width: 800px;
-  margin-top: 100px;
+  margin-top: 100px; 
   padding: 20px 0px 0px 20px;
+}
+
+.form-container2 {
+  border: solid rgb(201, 194, 194) 1px;
+  border-radius: 5px;
+  width: 800px;
+  margin-top: 5px; 
+  margin-bottom: 50px;
+  padding: 20px 0px 0px 20px;
+}
+
+#continue {
+  margin-bottom: 15px;
+  margin-left: 300px;
 }
