--- a/client/src/components/Pastcampaigns/Pastcampaigns.css
+++ b/client/src/components/Pastcampaigns/Pastcampaigns.css
@@ -1,14 +1,6 @@
-#logo {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
+.flex-container {
+  display: flex;
   margin-top: 50px;
-}
-
-#logo {
-  height: 200px;
-  width: 400px;
 }
 
 .button-container {
@@ -20,7 +12,8 @@
 }
 
 .buttons {
-  margin: 10px 10px 20px 20px;
+  margin-left: 30%;
+  margin-right: 50%;
 }
 
 .pagination {
