Finished the login and User Management page

--- a/client/src/components/Login/Login.css
+++ b/client/src/components/Login/Login.css
@@ -2,7 +2,8 @@
 
 
 .form-container {
-  border: solid rgb(90, 88, 88) 1px;
+  border: solid rgb(201, 194, 194) 1px;
+  /* border: solid rgb(90, 88, 88) 1px; */
   border-radius: 10px;
   width: 900px;
   margin-top: 100px;
